# ai-marketing-project

./: .gitignore  CLAUDE.md  RLM-README.md  dashboard-prototype.html  index.html
.github/workflows/: pages.yml
agents/ad-auditor/: skill.md
agents/contextologist/: skill.md
agents/copywriter/: skill.md
agents/creative-fatigue/: skill.md
agents/fact-checker/: skill.md
agents/landing-auditor/: skill.md
agents/media-buyer/: skill.md
agents/references/: audit-benchmarks.md  platform-specs.md
agents/strategist/: skill.md
agents/targeting/: skill.md
agents/validator/: skill.md
clients/gorizont-dev-test/: ab-test-report.md  brief.md  context-ads-plan.md  creatives.md  fact-check.md  media-plan.md  strategy.md  targeting-plan.md  test-strategy-v1.md  test-strategy-v2-rlm.md  validation.md
dashboard/: data.json  yandex-direct.html
harness-optimizer/: ARCHITECTURE.md  config.json  harness-log.md  runner.md  scoring-rubric.md  test-briefs.json
knowledge/: KB-INDEX.md
knowledge/bali-market/: _index.md  blackpoint-listings.md  developers.md  locations.md  market-insights-mityuhin.md  market-overview.md  pricing-economics.md  regulations.md  sources.md
landing/: deck.html
mcp-servers/yandex-direct-mcp/: .env.example  main.py  pyproject.toml  server.py
mcp-servers/yandex-wordstat-mcp/: .env.example  main.py  pyproject.toml
news-pipeline/: changelog.md  config.md  last-run-summary.md  orchestration-prompt.md
scripts/: export_dashboard_data.py  generate_audit_report.py
strategy/: ai-native-ops-model.md  positioning-analysis.md
(+303 files in other folders)
